tests/negative/typecheck/inject.orng
// inject.orng:8:20: error: expected a value of type `Char`, got a value of type `Int`
//     let x:T = S.b(3)
//                   ^
// 
fn main() -> Int {
    enum T { a(Int), b(Int) }
    enum S { a(Int), b(Char) }
    let x:T = S.b(3)
    0
}